== 2.0.3 25-04-2009

* Incluindo boleto para o banco Bradesco(Todas as Carteiras)

== 2.0.2 21-04-2009

* Incluindo boleto para o banco Real(com e sem registro)

== 2.0.1 19-04-2009

* Ajustes finais para lançamento

== 2.0.0 06-04-2009

* 1 acts_as_payment torna-se brcobranca:
  * Release inicial com versão em 2.0.0