@@ -10,12 +10,14 @@ lib/brcobranca/arquivos/logos/bradesco.jpg
 lib/brcobranca/arquivos/logos/hsbc.jpg
 lib/brcobranca/arquivos/logos/itau.jpg
 lib/brcobranca/arquivos/logos/real.jpg
+lib/brcobranca/arquivos/logos/unibanco.jpg
 lib/brcobranca/arquivos/templates/modelo_generico.eps
 lib/brcobranca/boleto/banco_bradesco.rb
 lib/brcobranca/boleto/banco_brasil.rb
 lib/brcobranca/boleto/banco_hsbc.rb
 lib/brcobranca/boleto/banco_itau.rb
 lib/brcobranca/boleto/banco_real.rb
+lib/brcobranca/boleto/banco_unibanco.rb
 lib/brcobranca/boleto/base.rb
 lib/brcobranca/boleto/template/rghost.rb
 lib/brcobranca/boleto/template/util.rb
@@ -33,6 +35,7 @@ test/test_banco_brasil.rb
 test/test_banco_hsbc.rb
 test/test_banco_itau.rb
 test/test_banco_real.rb
+test/test_banco_unibanco.rb
 test/test_base.rb
 test/test_core_ext.rb
 test/test_currency.rb
