@@ -12,7 +12,6 @@ Gem para emissão de bloquetos de cobrança para bancos brasileiros
 
 == Bancos Disponíveis 
 
-
 * Banco do Brasil
   * TODAS AS CARTEIRAS PRESENTES NA DOCUMENTAÇÃO
 
@@ -25,7 +24,13 @@ Gem para emissão de bloquetos de cobrança para bancos brasileiros
 * Banco Real
   * Sem registro
   * Com registro
-
+  
+* Banco Bradesco
+  * TODAS AS CARTEIRAS PRESENTES NA DOCUMENTAÇÃO
+  
+* Banco UNIBANCO
+  * Sem registro
+  * Com registro
 
 == Esta perdido?
 
